[gd_scene load_steps=15 format=3 uid="uid://blsv4kfkbe58v"]

[ext_resource type="Script" path="res://scripts/level_complete_sculpture.gd" id="1_ddelq"]
[ext_resource type="LabelSettings" uid="uid://tje0ygjwilaf" path="res://resources/small_title_label_settings.tres" id="2_frpri"]
[ext_resource type="MeshLibrary" uid="uid://cmofoee8fucl3" path="res://resources/mesh_library.tres" id="3_2pt3e"]
[ext_resource type="Texture2D" uid="uid://ciddnlhcacvjl" path="res://assets/sprites/stars_unfilled.webp" id="5_dmwbv"]
[ext_resource type="Texture2D" uid="uid://d3ubas71s5u06" path="res://assets/sprites/stars_filled.webp" id="6_cabyp"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="7_ysiat"]
[ext_resource type="Texture2D" uid="uid://bwhbp3rxdiaox" path="res://assets/sprites/share.webp" id="8_6ns0f"]
[ext_resource type="AudioStream" uid="uid://b2qimqv0cw1t6" path="res://assets/sfx/Notification, Attention, Short Phrase, Positive Achievement, Win, Video Game 05.ogg" id="8_av58b"]
[ext_resource type="AudioStream" uid="uid://bx654q2xltdwj" path="res://assets/sfx/nice.ogg" id="9_eb43q"]
[ext_resource type="AudioStream" uid="uid://be2uwixl3k0dq" path="res://assets/sfx/bad.ogg" id="10_dje5o"]
[ext_resource type="AudioStream" uid="uid://dwdchymwssfrb" path="res://assets/sfx/lose.ogg" id="11_e0r15"]
[ext_resource type="LabelSettings" uid="uid://c2qlpe3wovecb" path="res://resources/grade_comment_label_settings.tres" id="12_bkq6n"]

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_0r55t"]
frustum_focal_length = 135.17
frustum_far = 300.0

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_q1k0j"]
frustum_far = 300.0

[node name="LevelCompleteScreen" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_ddelq")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="pauseMenu" type="GridContainer" parent="background/VBoxContainer"]
custom_minimum_size = Vector2(1920, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(960, 160)
layout_mode = 2
size_flags_horizontal = 5
text = "Expected:"
label_settings = ExtResource("2_frpri")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(960, 160)
layout_mode = 2
size_flags_horizontal = 5
text = "Submitted:"
label_settings = ExtResource("2_frpri")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2
stretch = true

[node name="expectedSubViewport" type="SubViewport" parent="background/VBoxContainer/pauseMenu/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(960, 550)
render_target_update_mode = 4

[node name="expectedMarker" type="Marker3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer/expectedSubViewport"]
unique_name_in_owner = true
transform = Transform3D(0.939693, -0.0593912, 0.336824, 0, 0.984808, 0.173648, -0.34202, -0.163176, 0.925416, 0, 0, 0)

[node name="expectedCamera" type="Camera3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer/expectedSubViewport/expectedMarker"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
attributes = SubResource("CameraAttributesPhysical_0r55t")
h_offset = -0.5
v_offset = 2.0
current = true

[node name="SubViewportContainer2" type="SubViewportContainer" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2
stretch = true

[node name="submittedSubViewport" type="SubViewport" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(960, 550)
render_target_update_mode = 4

[node name="OmniLight3D2" type="OmniLight3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2/submittedSubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -589.271, 61.7, 85.612)
light_color = Color(1, 0.231373, 1, 1)
light_energy = 0.7
omni_range = 248.067
omni_attenuation = 0.13

[node name="OmniLight3D3" type="OmniLight3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2/submittedSubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -434.259, -83.043, -67.673)
light_color = Color(0.230984, 0.677161, 1, 1)
light_energy = 0.7
omni_range = 248.067
omni_attenuation = 0.13

[node name="submittedMarker" type="Marker3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2/submittedSubViewport"]
unique_name_in_owner = true
transform = Transform3D(0.939693, -0.0593912, 0.336824, 0, 0.984808, 0.173648, -0.34202, -0.163176, 0.925416, -512, 0, 0)

[node name="submittedCamera" type="Camera3D" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2/submittedSubViewport/submittedMarker"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
attributes = SubResource("CameraAttributesPhysical_q1k0j")
h_offset = -0.5
v_offset = 2.0
current = true

[node name="submittedGrid" type="GridMap" parent="background/VBoxContainer/pauseMenu/SubViewportContainer2/submittedSubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -512, 0, 0)
mesh_library = ExtResource("3_2pt3e")

[node name="grade" type="TextureProgressBar" parent="background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 10.0
value = 1.0
texture_under = ExtResource("5_dmwbv")
texture_progress = ExtResource("6_cabyp")
tint_over = Color(1, 0.27451, 1, 1)

[node name="nextLevelButton" parent="background/VBoxContainer" instance=ExtResource("7_ysiat")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Next level"

[node name="HBoxContainer" type="HBoxContainer" parent="background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="mainMenuButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("7_ysiat")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Back to level selection"

[node name="replayButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("7_ysiat")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Replay"

[node name="ShareButton" type="TextureButton" parent="background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1732.0
offset_top = 646.0
offset_right = 1864.0
offset_bottom = 778.0
texture_normal = ExtResource("8_6ns0f")
ignore_texture_size = true
stretch_mode = 0

[node name="achievementSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_av58b")
bus = &"sfx"

[node name="niceSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_eb43q")
bus = &"sfx"

[node name="badSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_dje5o")
bus = &"sfx"

[node name="loseSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_e0r15")
bus = &"sfx"

[node name="reactionText" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_top = 291.0
offset_right = 1920.0
offset_bottom = 658.0
text = "Almost perfect!"
label_settings = ExtResource("12_bkq6n")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="background/VBoxContainer/nextLevelButton" to="." method="load_next_level"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/mainMenuButton" to="." method="return_to_main_menu"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/replayButton" to="." method="reload_current_level"]
[connection signal="focus_entered" from="background/ShareButton" to="." method="_on_share_button_entered"]
[connection signal="focus_exited" from="background/ShareButton" to="." method="_on_share_button_exited"]
[connection signal="mouse_entered" from="background/ShareButton" to="." method="_on_share_button_entered"]
[connection signal="mouse_exited" from="background/ShareButton" to="." method="_on_share_button_exited"]
[connection signal="pressed" from="background/ShareButton" to="." method="_on_share_button_pressed"]
